# CMake_tutorial

./: .gitignore  .gitmodules
1-3/: CMakeLists.txt  main.cpp
2-1/: CMakeLists.txt  main.cpp
2-2/: CMakeLists.txt  adder.cpp  adder.h
2-3/: CMakeLists.txt  main.cpp
2-4/: CMakeLists.txt  main.cpp
2-4/lib/: CMakeLists.txt  adder.cpp  adder.h
3-1/: CMakeLists.txt  main.cpp  run.sh
3-2/: CMakeLists.txt  configure.sh  main.cpp
4-1/: CMakeLists.txt  build.sh  outputConfig.h.in  run.sh
5-1/: CMakeLists.txt  configure.sh  main.cpp
5-1/MyPrint/: CMakeLists.txt  myprint.h
5-2/: CMakeLists.txt  License.txt  outputConfig.h.in
5-2/MyPrint/: CMakeLists.txt  myprint.cpp
6-1/: CMakeLists.txt  main.cpp
